<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:backgroundTint="@color/green_18"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/search_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtCityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/button_border"
        android:hint="@string/edt_city"
        android:padding="@dimen/_10sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|center">

        <TextView
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/action_search"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>