<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OrderSuccessActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/img"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/_5sdp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="order_success.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/order_success"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title1"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:text="@string/order_success_desc"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title2"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:gravity="start"
        android:text="@string/order_success_desc_more"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/txtViewStatus"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/view_status"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

</RelativeLayout>